// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`named group > focus behavior > only > group only > should run only tests for the focused field within the group and run everything in other groups 1`] = `
{
  "dump": [Function],
  "errorCount": 4,
  "errors": [
    SummaryItem {
      "fieldName": "f1",
      "groupName": "g1",
      "message": undefined,
    },
    SummaryItem {
      "fieldName": "f1",
      "groupName": "g2",
      "message": undefined,
    },
    SummaryItem {
      "fieldName": "f2",
      "groupName": "g2",
      "message": undefined,
    },
    SummaryItem {
      "fieldName": "f3",
      "groupName": "g2",
      "message": undefined,
    },
  ],
  "getError": [Function],
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getMessage": [Function],
  "getSuccess": [Function],
  "getSuccesses": [Function],
  "getSuccessesByGroup": [Function],
  "getWarning": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": {
    "g1": {
      "f1": SummaryBase {
        "errorCount": 1,
        "errors": [],
        "pendingCount": 0,
        "success": [],
        "successCount": 0,
        "testCount": 1,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
      "f2": SummaryBase {
        "errorCount": 0,
        "errors": [],
        "pendingCount": 0,
        "success": [],
        "successCount": 0,
        "testCount": 0,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
      "f3": SummaryBase {
        "errorCount": 0,
        "errors": [],
        "pendingCount": 0,
        "success": [],
        "successCount": 0,
        "testCount": 0,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
    },
    "g2": {
      "f1": SummaryBase {
        "errorCount": 1,
        "errors": [],
        "pendingCount": 0,
        "success": [],
        "successCount": 0,
        "testCount": 1,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
      "f2": SummaryBase {
        "errorCount": 1,
        "errors": [],
        "pendingCount": 0,
        "success": [],
        "successCount": 0,
        "testCount": 1,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
      "f3": SummaryBase {
        "errorCount": 1,
        "errors": [],
        "pendingCount": 0,
        "success": [],
        "successCount": 0,
        "testCount": 1,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
    },
  },
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasSuccesses": [Function],
  "hasSuccessesByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "isPending": [Function],
  "isTested": [Function],
  "isValid": [Function],
  "isValidByGroup": [Function],
  "issues": [],
  "pendingCount": 0,
  "success": [],
  "successCount": 0,
  "testCount": 4,
  "tests": {
    "f1": {
      "errorCount": 2,
      "errors": [],
      "pendingCount": 0,
      "success": [],
      "successCount": 0,
      "testCount": 2,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "f2": {
      "errorCount": 1,
      "errors": [],
      "pendingCount": 0,
      "success": [],
      "successCount": 0,
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "f3": {
      "errorCount": 1,
      "errors": [],
      "pendingCount": 0,
      "success": [],
      "successCount": 0,
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
  },
  "types": undefined,
  "valid": false,
  "warnCount": 0,
  "warnings": [],
}
`;

exports[`named group > focus behavior > only > top level only > should run only tests for the focused field across all groups 1`] = `
{
  "dump": [Function],
  "errorCount": 3,
  "errors": [
    SummaryItem {
      "fieldName": "f1",
      "groupName": undefined,
      "message": undefined,
    },
    SummaryItem {
      "fieldName": "f1",
      "groupName": "g1",
      "message": undefined,
    },
    SummaryItem {
      "fieldName": "f1",
      "groupName": "g2",
      "message": undefined,
    },
  ],
  "getError": [Function],
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getMessage": [Function],
  "getSuccess": [Function],
  "getSuccesses": [Function],
  "getSuccessesByGroup": [Function],
  "getWarning": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": {
    "g1": {
      "f1": SummaryBase {
        "errorCount": 1,
        "errors": [],
        "pendingCount": 0,
        "success": [],
        "successCount": 0,
        "testCount": 1,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
      "f2": SummaryBase {
        "errorCount": 0,
        "errors": [],
        "pendingCount": 0,
        "success": [],
        "successCount": 0,
        "testCount": 0,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
      "f3": SummaryBase {
        "errorCount": 0,
        "errors": [],
        "pendingCount": 0,
        "success": [],
        "successCount": 0,
        "testCount": 0,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
    },
    "g2": {
      "f1": SummaryBase {
        "errorCount": 1,
        "errors": [],
        "pendingCount": 0,
        "success": [],
        "successCount": 0,
        "testCount": 1,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
      "f2": SummaryBase {
        "errorCount": 0,
        "errors": [],
        "pendingCount": 0,
        "success": [],
        "successCount": 0,
        "testCount": 0,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
      "f3": SummaryBase {
        "errorCount": 0,
        "errors": [],
        "pendingCount": 0,
        "success": [],
        "successCount": 0,
        "testCount": 0,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
    },
  },
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasSuccesses": [Function],
  "hasSuccessesByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "isPending": [Function],
  "isTested": [Function],
  "isValid": [Function],
  "isValidByGroup": [Function],
  "issues": [],
  "pendingCount": 0,
  "success": [],
  "successCount": 0,
  "testCount": 3,
  "tests": {
    "f1": {
      "errorCount": 3,
      "errors": [],
      "pendingCount": 0,
      "success": [],
      "successCount": 0,
      "testCount": 3,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "f2": {
      "errorCount": 0,
      "errors": [],
      "pendingCount": 0,
      "success": [],
      "successCount": 0,
      "testCount": 0,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "f3": {
      "errorCount": 0,
      "errors": [],
      "pendingCount": 0,
      "success": [],
      "successCount": 0,
      "testCount": 0,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
  },
  "types": undefined,
  "valid": false,
  "warnCount": 0,
  "warnings": [],
}
`;

exports[`named group > focus behavior > skip inside the group > should skip the field only within the current group 1`] = `
{
  "dump": [Function],
  "errorCount": 3,
  "errors": [
    SummaryItem {
      "fieldName": "f1",
      "groupName": undefined,
      "message": undefined,
    },
    SummaryItem {
      "fieldName": "f1",
      "groupName": "g1",
      "message": undefined,
    },
    SummaryItem {
      "fieldName": "f2",
      "groupName": undefined,
      "message": undefined,
    },
  ],
  "getError": [Function],
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getMessage": [Function],
  "getSuccess": [Function],
  "getSuccesses": [Function],
  "getSuccessesByGroup": [Function],
  "getWarning": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": {
    "g1": {
      "f1": SummaryBase {
        "errorCount": 1,
        "errors": [],
        "pendingCount": 0,
        "success": [],
        "successCount": 0,
        "testCount": 1,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
      "f2": SummaryBase {
        "errorCount": 0,
        "errors": [],
        "pendingCount": 0,
        "success": [],
        "successCount": 0,
        "testCount": 0,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
    },
  },
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasSuccesses": [Function],
  "hasSuccessesByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "isPending": [Function],
  "isTested": [Function],
  "isValid": [Function],
  "isValidByGroup": [Function],
  "issues": [],
  "pendingCount": 0,
  "success": [],
  "successCount": 0,
  "testCount": 3,
  "tests": {
    "f1": {
      "errorCount": 2,
      "errors": [],
      "pendingCount": 0,
      "success": [],
      "successCount": 0,
      "testCount": 2,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "f2": {
      "errorCount": 1,
      "errors": [],
      "pendingCount": 0,
      "success": [],
      "successCount": 0,
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
  },
  "types": undefined,
  "valid": false,
  "warnCount": 0,
  "warnings": [],
}
`;

exports[`named group > focus behavior > skip inside the group > should skip the field only within the current group and not affect the next group 1`] = `
{
  "dump": [Function],
  "errorCount": 3,
  "errors": [
    SummaryItem {
      "fieldName": "f1",
      "groupName": undefined,
      "message": undefined,
    },
    SummaryItem {
      "fieldName": "f1",
      "groupName": "g1",
      "message": undefined,
    },
    SummaryItem {
      "fieldName": "f2",
      "groupName": "g2",
      "message": undefined,
    },
  ],
  "getError": [Function],
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getMessage": [Function],
  "getSuccess": [Function],
  "getSuccesses": [Function],
  "getSuccessesByGroup": [Function],
  "getWarning": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": {
    "g1": {
      "f1": SummaryBase {
        "errorCount": 1,
        "errors": [],
        "pendingCount": 0,
        "success": [],
        "successCount": 0,
        "testCount": 1,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
      "f2": SummaryBase {
        "errorCount": 0,
        "errors": [],
        "pendingCount": 0,
        "success": [],
        "successCount": 0,
        "testCount": 0,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
    },
    "g2": {
      "f2": SummaryBase {
        "errorCount": 1,
        "errors": [],
        "pendingCount": 0,
        "success": [],
        "successCount": 0,
        "testCount": 1,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
    },
  },
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasSuccesses": [Function],
  "hasSuccessesByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "isPending": [Function],
  "isTested": [Function],
  "isValid": [Function],
  "isValidByGroup": [Function],
  "issues": [],
  "pendingCount": 0,
  "success": [],
  "successCount": 0,
  "testCount": 3,
  "tests": {
    "f1": {
      "errorCount": 2,
      "errors": [],
      "pendingCount": 0,
      "success": [],
      "successCount": 0,
      "testCount": 2,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "f2": {
      "errorCount": 1,
      "errors": [],
      "pendingCount": 0,
      "success": [],
      "successCount": 0,
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
  },
  "types": undefined,
  "valid": false,
  "warnCount": 0,
  "warnings": [],
}
`;

exports[`named group > focus behavior > skip inside the group > skip(true) > should skip all tests in the current group only 1`] = `
{
  "dump": [Function],
  "errorCount": 5,
  "errors": [
    SummaryItem {
      "fieldName": "f2",
      "groupName": "g2",
      "message": undefined,
    },
    SummaryItem {
      "fieldName": "f3",
      "groupName": "g2",
      "message": undefined,
    },
    SummaryItem {
      "fieldName": "f1",
      "groupName": undefined,
      "message": undefined,
    },
    SummaryItem {
      "fieldName": "f2",
      "groupName": undefined,
      "message": undefined,
    },
    SummaryItem {
      "fieldName": "f3",
      "groupName": undefined,
      "message": undefined,
    },
  ],
  "getError": [Function],
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getMessage": [Function],
  "getSuccess": [Function],
  "getSuccesses": [Function],
  "getSuccessesByGroup": [Function],
  "getWarning": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": {
    "g1": {
      "f1": SummaryBase {
        "errorCount": 0,
        "errors": [],
        "pendingCount": 0,
        "success": [],
        "successCount": 0,
        "testCount": 0,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
      "f2": SummaryBase {
        "errorCount": 0,
        "errors": [],
        "pendingCount": 0,
        "success": [],
        "successCount": 0,
        "testCount": 0,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
    },
    "g2": {
      "f2": SummaryBase {
        "errorCount": 1,
        "errors": [],
        "pendingCount": 0,
        "success": [],
        "successCount": 0,
        "testCount": 1,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
      "f3": SummaryBase {
        "errorCount": 1,
        "errors": [],
        "pendingCount": 0,
        "success": [],
        "successCount": 0,
        "testCount": 1,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
    },
  },
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasSuccesses": [Function],
  "hasSuccessesByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "isPending": [Function],
  "isTested": [Function],
  "isValid": [Function],
  "isValidByGroup": [Function],
  "issues": [],
  "pendingCount": 0,
  "success": [],
  "successCount": 0,
  "testCount": 5,
  "tests": {
    "f1": {
      "errorCount": 1,
      "errors": [],
      "pendingCount": 0,
      "success": [],
      "successCount": 0,
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "f2": {
      "errorCount": 2,
      "errors": [],
      "pendingCount": 0,
      "success": [],
      "successCount": 0,
      "testCount": 2,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "f3": {
      "errorCount": 2,
      "errors": [],
      "pendingCount": 0,
      "success": [],
      "successCount": 0,
      "testCount": 2,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
  },
  "types": undefined,
  "valid": false,
  "warnCount": 0,
  "warnings": [],
}
`;

exports[`named group > focus behavior > skip outside of group > should skip tests for a field both inside and outside the group when skipped before grouping 1`] = `
{
  "dump": [Function],
  "errorCount": 1,
  "errors": [
    SummaryItem {
      "fieldName": "f2",
      "groupName": "g1",
      "message": undefined,
    },
  ],
  "getError": [Function],
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getMessage": [Function],
  "getSuccess": [Function],
  "getSuccesses": [Function],
  "getSuccessesByGroup": [Function],
  "getWarning": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": {
    "g1": {
      "f1": SummaryBase {
        "errorCount": 0,
        "errors": [],
        "pendingCount": 0,
        "success": [],
        "successCount": 0,
        "testCount": 0,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
      "f2": SummaryBase {
        "errorCount": 1,
        "errors": [],
        "pendingCount": 0,
        "success": [],
        "successCount": 0,
        "testCount": 1,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
    },
  },
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasSuccesses": [Function],
  "hasSuccessesByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "isPending": [Function],
  "isTested": [Function],
  "isValid": [Function],
  "isValidByGroup": [Function],
  "issues": [],
  "pendingCount": 0,
  "success": [],
  "successCount": 0,
  "testCount": 1,
  "tests": {
    "f1": {
      "errorCount": 0,
      "errors": [],
      "pendingCount": 0,
      "success": [],
      "successCount": 0,
      "testCount": 0,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "f2": SummaryBase {
      "errorCount": 1,
      "errors": [],
      "pendingCount": 0,
      "success": [],
      "successCount": 0,
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
  },
  "types": undefined,
  "valid": false,
  "warnCount": 0,
  "warnings": [],
}
`;

exports[`named group > multiple named groups > should run the tests inside each named group 1`] = `
{
  "dump": [Function],
  "errorCount": 5,
  "errors": [
    SummaryItem {
      "fieldName": "f1",
      "groupName": undefined,
      "message": undefined,
    },
    SummaryItem {
      "fieldName": "f1",
      "groupName": "g1",
      "message": undefined,
    },
    SummaryItem {
      "fieldName": "f2",
      "groupName": "g1",
      "message": undefined,
    },
    SummaryItem {
      "fieldName": "f1",
      "groupName": "g2",
      "message": undefined,
    },
    SummaryItem {
      "fieldName": "f2",
      "groupName": "g2",
      "message": undefined,
    },
  ],
  "getError": [Function],
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getMessage": [Function],
  "getSuccess": [Function],
  "getSuccesses": [Function],
  "getSuccessesByGroup": [Function],
  "getWarning": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": {
    "g1": {
      "f1": SummaryBase {
        "errorCount": 1,
        "errors": [],
        "pendingCount": 0,
        "success": [],
        "successCount": 0,
        "testCount": 1,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
      "f2": SummaryBase {
        "errorCount": 1,
        "errors": [],
        "pendingCount": 0,
        "success": [],
        "successCount": 0,
        "testCount": 1,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
      "f3": SummaryBase {
        "errorCount": 0,
        "errors": [],
        "pendingCount": 0,
        "success": [],
        "successCount": 0,
        "testCount": 1,
        "valid": true,
        "warnCount": 0,
        "warnings": [],
      },
    },
    "g2": {
      "f1": SummaryBase {
        "errorCount": 1,
        "errors": [],
        "pendingCount": 0,
        "success": [],
        "successCount": 0,
        "testCount": 1,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
      "f2": SummaryBase {
        "errorCount": 1,
        "errors": [],
        "pendingCount": 0,
        "success": [],
        "successCount": 0,
        "testCount": 1,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
      "f3": SummaryBase {
        "errorCount": 0,
        "errors": [],
        "pendingCount": 0,
        "success": [],
        "successCount": 0,
        "testCount": 1,
        "valid": true,
        "warnCount": 0,
        "warnings": [],
      },
    },
  },
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasSuccesses": [Function],
  "hasSuccessesByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "isPending": [Function],
  "isTested": [Function],
  "isValid": [Function],
  "isValidByGroup": [Function],
  "issues": [],
  "pendingCount": 0,
  "success": [],
  "successCount": 0,
  "testCount": 7,
  "tests": {
    "f1": {
      "errorCount": 3,
      "errors": [],
      "pendingCount": 0,
      "success": [],
      "successCount": 0,
      "testCount": 3,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "f2": {
      "errorCount": 2,
      "errors": [],
      "pendingCount": 0,
      "success": [],
      "successCount": 0,
      "testCount": 2,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "f3": {
      "errorCount": 0,
      "errors": [],
      "pendingCount": 0,
      "success": [],
      "successCount": 0,
      "testCount": 2,
      "valid": true,
      "warnCount": 0,
      "warnings": [],
    },
  },
  "types": undefined,
  "valid": false,
  "warnCount": 0,
  "warnings": [],
}
`;

exports[`named group > should run the tests inside the named group 1`] = `
{
  "dump": [Function],
  "errorCount": 3,
  "errors": [
    SummaryItem {
      "fieldName": "f1",
      "groupName": undefined,
      "message": undefined,
    },
    SummaryItem {
      "fieldName": "f1",
      "groupName": "g1",
      "message": undefined,
    },
    SummaryItem {
      "fieldName": "f2",
      "groupName": "g1",
      "message": undefined,
    },
  ],
  "getError": [Function],
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getMessage": [Function],
  "getSuccess": [Function],
  "getSuccesses": [Function],
  "getSuccessesByGroup": [Function],
  "getWarning": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": {
    "g1": {
      "f1": SummaryBase {
        "errorCount": 1,
        "errors": [],
        "pendingCount": 0,
        "success": [],
        "successCount": 0,
        "testCount": 1,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
      "f2": SummaryBase {
        "errorCount": 1,
        "errors": [],
        "pendingCount": 0,
        "success": [],
        "successCount": 0,
        "testCount": 1,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
      "f3": SummaryBase {
        "errorCount": 0,
        "errors": [],
        "pendingCount": 0,
        "success": [],
        "successCount": 0,
        "testCount": 1,
        "valid": true,
        "warnCount": 0,
        "warnings": [],
      },
    },
  },
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasSuccesses": [Function],
  "hasSuccessesByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "isPending": [Function],
  "isTested": [Function],
  "isValid": [Function],
  "isValidByGroup": [Function],
  "issues": [],
  "pendingCount": 0,
  "success": [],
  "successCount": 0,
  "testCount": 4,
  "tests": {
    "f1": {
      "errorCount": 2,
      "errors": [],
      "pendingCount": 0,
      "success": [],
      "successCount": 0,
      "testCount": 2,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "f2": SummaryBase {
      "errorCount": 1,
      "errors": [],
      "pendingCount": 0,
      "success": [],
      "successCount": 0,
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "f3": SummaryBase {
      "errorCount": 0,
      "errors": [],
      "pendingCount": 0,
      "success": [],
      "successCount": 0,
      "testCount": 1,
      "valid": true,
      "warnCount": 0,
      "warnings": [],
    },
  },
  "types": undefined,
  "valid": false,
  "warnCount": 0,
  "warnings": [],
}
`;

exports[`unnamed groups > should not add the unnamed group to the results object 1`] = `
{
  "dump": [Function],
  "errorCount": 3,
  "errors": [
    SummaryItem {
      "fieldName": "f1",
      "groupName": undefined,
      "message": undefined,
    },
    SummaryItem {
      "fieldName": "f2",
      "groupName": undefined,
      "message": undefined,
    },
    SummaryItem {
      "fieldName": "f3",
      "groupName": undefined,
      "message": undefined,
    },
  ],
  "getError": [Function],
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getMessage": [Function],
  "getSuccess": [Function],
  "getSuccesses": [Function],
  "getSuccessesByGroup": [Function],
  "getWarning": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": {},
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasSuccesses": [Function],
  "hasSuccessesByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "isPending": [Function],
  "isTested": [Function],
  "isValid": [Function],
  "isValidByGroup": [Function],
  "issues": [],
  "pendingCount": 0,
  "success": [],
  "successCount": 0,
  "testCount": 3,
  "tests": {
    "f1": SummaryBase {
      "errorCount": 1,
      "errors": [],
      "pendingCount": 0,
      "success": [],
      "successCount": 0,
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "f2": SummaryBase {
      "errorCount": 1,
      "errors": [],
      "pendingCount": 0,
      "success": [],
      "successCount": 0,
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "f3": SummaryBase {
      "errorCount": 1,
      "errors": [],
      "pendingCount": 0,
      "success": [],
      "successCount": 0,
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
  },
  "types": undefined,
  "valid": false,
  "warnCount": 0,
  "warnings": [],
}
`;

exports[`unnamed groups > should run tests inside the unnamed group normally 1`] = `
{
  "dump": [Function],
  "errorCount": 3,
  "errors": [
    SummaryItem {
      "fieldName": "f1",
      "groupName": undefined,
      "message": undefined,
    },
    SummaryItem {
      "fieldName": "f2",
      "groupName": undefined,
      "message": undefined,
    },
    SummaryItem {
      "fieldName": "f3",
      "groupName": undefined,
      "message": undefined,
    },
  ],
  "getError": [Function],
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getMessage": [Function],
  "getSuccess": [Function],
  "getSuccesses": [Function],
  "getSuccessesByGroup": [Function],
  "getWarning": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": {},
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasSuccesses": [Function],
  "hasSuccessesByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "isPending": [Function],
  "isTested": [Function],
  "isValid": [Function],
  "isValidByGroup": [Function],
  "issues": [],
  "pendingCount": 0,
  "success": [],
  "successCount": 0,
  "testCount": 3,
  "tests": {
    "f1": SummaryBase {
      "errorCount": 1,
      "errors": [],
      "pendingCount": 0,
      "success": [],
      "successCount": 0,
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "f2": SummaryBase {
      "errorCount": 1,
      "errors": [],
      "pendingCount": 0,
      "success": [],
      "successCount": 0,
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "f3": SummaryBase {
      "errorCount": 1,
      "errors": [],
      "pendingCount": 0,
      "success": [],
      "successCount": 0,
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
  },
  "types": undefined,
  "valid": false,
  "warnCount": 0,
  "warnings": [],
}
`;

exports[`unnamed groups > with only > should run only tests for the focused field inside the unnamed group 1`] = `
{
  "dump": [Function],
  "errorCount": 1,
  "errors": [
    SummaryItem {
      "fieldName": "f1",
      "groupName": undefined,
      "message": undefined,
    },
  ],
  "getError": [Function],
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getMessage": [Function],
  "getSuccess": [Function],
  "getSuccesses": [Function],
  "getSuccessesByGroup": [Function],
  "getWarning": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": {},
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasSuccesses": [Function],
  "hasSuccessesByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "isPending": [Function],
  "isTested": [Function],
  "isValid": [Function],
  "isValidByGroup": [Function],
  "issues": [],
  "pendingCount": 0,
  "success": [],
  "successCount": 0,
  "testCount": 1,
  "tests": {
    "f1": SummaryBase {
      "errorCount": 1,
      "errors": [],
      "pendingCount": 0,
      "success": [],
      "successCount": 0,
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "f2": SummaryBase {
      "errorCount": 0,
      "errors": [],
      "pendingCount": 0,
      "success": [],
      "successCount": 0,
      "testCount": 0,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "f3": SummaryBase {
      "errorCount": 0,
      "errors": [],
      "pendingCount": 0,
      "success": [],
      "successCount": 0,
      "testCount": 0,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
  },
  "types": undefined,
  "valid": false,
  "warnCount": 0,
  "warnings": [],
}
`;

exports[`unnamed groups > with skip > should skip tests for the specified field only 1`] = `
{
  "dump": [Function],
  "errorCount": 2,
  "errors": [
    SummaryItem {
      "fieldName": "f2",
      "groupName": undefined,
      "message": undefined,
    },
    SummaryItem {
      "fieldName": "f3",
      "groupName": undefined,
      "message": undefined,
    },
  ],
  "getError": [Function],
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getMessage": [Function],
  "getSuccess": [Function],
  "getSuccesses": [Function],
  "getSuccessesByGroup": [Function],
  "getWarning": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": {},
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasSuccesses": [Function],
  "hasSuccessesByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "isPending": [Function],
  "isTested": [Function],
  "isValid": [Function],
  "isValidByGroup": [Function],
  "issues": [],
  "pendingCount": 0,
  "success": [],
  "successCount": 0,
  "testCount": 2,
  "tests": {
    "f1": SummaryBase {
      "errorCount": 0,
      "errors": [],
      "pendingCount": 0,
      "success": [],
      "successCount": 0,
      "testCount": 0,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "f2": SummaryBase {
      "errorCount": 1,
      "errors": [],
      "pendingCount": 0,
      "success": [],
      "successCount": 0,
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "f3": SummaryBase {
      "errorCount": 1,
      "errors": [],
      "pendingCount": 0,
      "success": [],
      "successCount": 0,
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
  },
  "types": undefined,
  "valid": false,
  "warnCount": 0,
  "warnings": [],
}
`;

exports[`unnamed groups > with skip(true) > should skip all tests inside the unnamed group 1`] = `
{
  "dump": [Function],
  "errorCount": 0,
  "errors": [],
  "getError": [Function],
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getMessage": [Function],
  "getSuccess": [Function],
  "getSuccesses": [Function],
  "getSuccessesByGroup": [Function],
  "getWarning": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": {},
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasSuccesses": [Function],
  "hasSuccessesByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "isPending": [Function],
  "isTested": [Function],
  "isValid": [Function],
  "isValidByGroup": [Function],
  "issues": [],
  "pendingCount": 0,
  "success": [],
  "successCount": 0,
  "testCount": 0,
  "tests": {
    "f1": SummaryBase {
      "errorCount": 0,
      "errors": [],
      "pendingCount": 0,
      "success": [],
      "successCount": 0,
      "testCount": 0,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "f2": SummaryBase {
      "errorCount": 0,
      "errors": [],
      "pendingCount": 0,
      "success": [],
      "successCount": 0,
      "testCount": 0,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "f3": SummaryBase {
      "errorCount": 0,
      "errors": [],
      "pendingCount": 0,
      "success": [],
      "successCount": 0,
      "testCount": 0,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
  },
  "types": undefined,
  "valid": false,
  "warnCount": 0,
  "warnings": [],
}
`;
